<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="idnull.znz.currency.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="idnull.znz.currency.presentation.coin.CoinFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_coin" >
        <action
            android:id="@+id/action_navigation_dashboard_to_coin2Fragment2"
            app:destination="@id/coin2Fragment2" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="idnull.znz.currency.presentation.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/coin2Fragment2"
        android:name="idnull.znz.currency.Coin2Fragment"
        android:label="fragment_coin2"
        tools:layout="@layout/fragment_coin2" />
</navigation>